--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     // ===== Core: Spring Boot Starters =====
     implementation 'org.springframework.boot:spring-boot-starter-actuator'     // 헬스/메트릭
     implementation 'org.springframework.boot:spring-boot-starter-webflux'      // WebFlux 기반 (게이트웨이 권장)
+    implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer" // @LoadBalanced WebClient
 
     // ===== API Gateway =====
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'    // Spring Cloud Gateway (WebFlux)
