--- a/build.gradle
+++ b/build.gradle
@@ -64,3 +64,7 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+springBoot {
+    mainClass = 'com.tunaforce.gateway.GatewayApplication'
+}
